# faemiyah-demoscene_2022-08_80k-intro_kerava

./: .gitignore  CMakeLists.txt  LICENCE  README  README.md  autogen.sh  cmake_generate_vs2019.bat  compile.sh  defaults.cmake  mesh.py  refresh.sh  release.sh
ref/: burj_kerava.blend  heitto.blend  heitto2.blend  hissihenkilö.blend  hissihenkilö_animated.blend  john_kerava_center.blend  kerava_state_building.blend  keravanas_towers.blend  sirkus_hevo_nen.blend  test_armature.blend
ref/voiceover_samples/: concat_waves.sh  generate_sample_header.py
rel/: font.frag.glsl  font_overlay.vert.glsl  header.glsl  kerava_freebsd-amd64  kerava_freebsd-ia32  kerava_linux-amd64  kerava_linux-arm32l  kerava_linux-arm32l_compo_720p_fullscreen  kerava_linux-arm32l_compo_720p_windowed  offscreen.frag.glsl  offscreen.vert.glsl  visualization.frag.glsl
src/: audio_samples.hpp  csg_arc.hpp  csg_bridge.hpp  csg_fence.hpp  csg_john_kerava_center.hpp  csg_kerava_state_building.hpp  csg_kerava_station.hpp  csg_keravanas_towers.hpp  csg_pylon.hpp  csg_pylon_base.hpp  csg_ramp.hpp  csg_sign0.hpp  csg_sign1.hpp  csg_sign2.hpp  csg_sign3.hpp  csg_sm5_chair.hpp  csg_sm5_chair_l.hpp  csg_sm5_chair_r.hpp  csg_sm5_interior.hpp  csg_station_building.hpp  csg_tendon.hpp  csg_train0.hpp  csg_train1.hpp  dnload.h  font.frag.glsl.hpp  font.vert.glsl  font.vert.glsl.hpp  font_overlay.frag.glsl  font_overlay.frag.glsl.hpp  font_overlay.vert.glsl.hpp  gnu_rand.c  header.glsl  header.glsl.hpp  intro_data.hpp  intro_state.hpp  intro_world.hpp  main.cpp  mesh_figure.hpp  mesh_sirkus_hevo_nen.hpp  mesh_ukko.hpp  (+14 more)
src/synth/: BandLimit.cpp  BandLimit.hpp  ops_log.hpp  songdata.hpp  verbatim_chorus.hpp  verbatim_common.hpp  verbatim_delay.hpp  verbatim_distortion.hpp  verbatim_echo.hpp  verbatim_env_gen.hpp  verbatim_filter.hpp  verbatim_onepole_filter.hpp  verbatim_oscillator.hpp  verbatim_parameters.hpp  verbatim_poly_handler.hpp  verbatim_reverb.hpp  verbatim_stereo_filter.hpp  verbatim_synth.hpp  verbatim_voice.hpp
src/vgl/: filelist.cmake  opus2raw  test  vgl_cond.hpp  vgl_extern_opengl.hpp  vgl_fence.hpp  vgl_geometry_handle.hpp  vgl_image.hpp  vgl_index_block.hpp  vgl_mesh_data.hpp  vgl_mutex.hpp  vgl_state.hpp  vgl_string.hpp  vgl_task_dispatcher.hpp  vgl_uvec4.hpp
